Revert "Fixes the clipping webhooks page on screen large"
This reverts commit f93158276661abd5ed76fa0bc8e728eb4463a101.

--- a/app/assets/stylesheets/public/_docs.scss
+++ b/app/assets/stylesheets/public/_docs.scss
@@ -94,6 +94,7 @@ $color-green: rgb(3, 165, 98);
     grid-template-columns: minmax(10px, 1fr) 250px;
     position: relative;
     gap: 30px;
+    grid-template-columns: 1fr $sidebar-width;
 
     &--is-landing-page {
       display: block;
